add header instead of div

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="css/lightbox.css" rel="stylesheet">
   </head>
   <body>
-    <div>
+    <header>
       <h1>Tehtävä 1: Kuvagallerian toteutus</h1>
       <a href="images/image-1.jpg" data-lightbox="Praha" data-title="Kaarlen silta">
         <img src="images/image-1.jpg" alt="Kaarlen silta">
@@ -27,8 +27,8 @@
       <a href="images/image-6.jpg" data-lightbox="Praha" data-title="Marionetit">
         <img src="images/image-6.jpg" alt="Marionetit">
       </a>
-    </div>
-    <div>
+    </header>
+    <header>
       <h1>Tehtävä 2 - Videon esittäminen</h1>
       <video 
         controls
@@ -46,12 +46,12 @@
           <a href="video/helicopter.mp4" download="video/helicopter.mp4">link to the video</a> instead.
         </p>
       </video>
-    </div>
-    <div>
+    </header>
+    <header>
       <h1>Tehtävä 3 - Videon esittäminen webbisivun taustalla ja Tehtävä 5 - Audio webbisivun taustalla</h1>
       <p>Tämä <a href="video_sivu.html" target="_blank">linkki</a></p>
-    </div>
-    <div>
+    </header>
+    <header>
       <h1>Tehtävä 4 - Audio</h1>
       <audio controls>
         <source src="audio/kalimba.mp3" type="audio/mpeg">
@@ -61,7 +61,7 @@
           <a href="audio/kalimba.ogg" download="audio/kalimba.ogg">OGG</a> audio.
         </p>
       </audio>
-    </div>
+    </header>
     <script src="js/lightbox-plus-jquery.js"></script>
   </body>
 </html>
